@@ -109,8 +109,8 @@ sensor_checkedCalc
 scat_data_checkedCalc
 
 # Perform scattering calculation 
-DisortCalc #( nstreams=64 ) #( non_iso_inc=1 )
-#DisortCalc( new_optprop=1 )
+#DisortCalc #( nstreams=64 ) #( non_iso_inc=1 )
+DisortCalc( new_optprop=1 )
 #WriteXML( output_file_format, doit_i_field )
    
 # Calculate RT from cloudbox boundary to the sensor
